php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #14049 Inconsistent return in realpath
Submitted: 2001-11-14 04:24 UTC Modified: 2003-09-09 20:21 UTC
From: g dot noel at symphonieonline dot com Assigned: iliaa (profile)
Status: Closed Package: *Directory/Filesystem functions
PHP Version: 4.3.4-dev, 5.0.0b2-dev OS: win32 only
Private report: No CVE-ID: None
 [2001-11-14 04:24 UTC] g dot noel at symphonieonline dot com
<?php
echo '['.realpath('./invalid/dir/or/file/name).']';
?>

On Windows : [c:\www\invalid\dir\or\file\name]
On Linux   : []

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2002-06-04 16:21 UTC] mfischer@php.net
This bug has been fixed in CVS. You can grab a snapshot of the
CVS version at http://snaps.php.net/. In case this was a documentation 
problem, the fix will show up soon at http://www.php.net/manual/.
In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites.
Thank you for the report, and for helping us make PHP better.


 [2003-08-20 19:10 UTC] sniper@php.net
This is back, on windows, realpath() returns still any path, even if it doesn't exist. (manual says it's supposed to return FALSE in such case)

 [2003-08-20 19:11 UTC] brandon dot whitehead at orst dot edu
I get the following output when run on Linux and Windows, both running 4.3.2.  I ran this test with the command line interface.  

<?php
    echo '['.realpath('./invalid/dir/or/file/name').']'; 
?>

The results:

On Windows : [d:\http\invalid\dir\or\file\name]
On Linux   : []

The function should return false if the file is not a valid file (according to the documentation).  It does not do this in Windows.  I am not making this up.  The problem still exists, on both Windows 2000 Pro and Windows XP Pro.  

Though possible, I doubt this is a configuration issue.
 [2003-09-09 20:21 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 13 02:00:01 2026 UTC