Fixed bug #14049 (realpath() w/ZTS returns invalid results for non-existent paths)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@139986 c90b9560-bf6c-de11-be94-00142212c4b1